# pulsarV1

./: .gitignore  ANDROID_SECURITY_AUDIT_COMPLETE.md  AVALANCHE_POLYGON_ANALYSIS.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_SECURITY_ARCHITECTURE_ANALYSIS.md  CRITICAL_FIXES_APPLIED_V2.md  FIXES_IMPLEMENTED_AVALANCHE_POLYGON.md  FIX_SIMPLIFIED_APPROACH.md  PHASE1_IMPLEMENTATION_REPORT.md  POLYGON_FIXES_COMPLETE.md  README_INDEX.md  ROOT_CAUSE_ANALYSIS_COMPLETE.md
.github/workflows/: rust-android-ci.yml
Wallet-Rust/: .gitignore  LICENSE  PHASE_1_BUILD_VERIFICATION.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_IMPLEMENTATION_MAP.md  PHASE_1_QUICK_REFERENCE.md  PHASE_1_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_KICKOFF.md  PHASE_3_BUILD_SUCCESS.md  PHASE_3_KICKOFF.md  PHASE_3_STATUS_REPORT.md  PHASE_4_KICKOFF.md  PHASE_4_STEP4_VERIFICATION.md  PHASE_4_TEST_EXECUTION_GUIDE.md  UNIFFI_AUDIT_REPORT.md  UNIFFI_AUDIT_SUMMARY.md  UNIFFI_IMPLEMENTATION_CHECKLIST.md  check-file-size.mjs  check_rust_file_size.ps1  run_all_tests_fast.bat  run_direct_test.kts  run_phase4_tests.bat  run_phase4_tests.ps1  run_single_test.bat  test_runner.kts  tmp_rpc_probe.ps1  tmp_rpc_probe2.ps1  tmp_swap_check.ps1  tmp_swap_probe2.ps1  tmp_swap_scan.ps1  wallet.udl
Wallet-Rust/.github/workflows/: ci.yml
Wallet-Rust/backend/: .env.example  Cargo.toml
Wallet-Rust/backend/contracts/solana-amm/: Anchor.toml  Cargo.toml
Wallet-Rust/backend/contracts/solana-amm/programs/amm/: Cargo.toml
Wallet-Rust/backend/contracts/solana-amm/programs/amm/src/: lib.rs
Wallet-Rust/backend/core/: Cargo.toml
Wallet-Rust/backend/evm-tooling/: Cargo.toml
Wallet-Rust/backend/server/: Cargo.toml  errors.txt  errors2.txt  out.txt  warnings.txt
Wallet-Rust/backend/server/src/: app.rs  cloud_store.rs  config.rs  main.rs  policy.rs  rate_limit.rs  request_context.rs
Wallet-Rust/backend/server/src/app/tests/: phase2_regression_matrix.rs
Wallet-Rust/backend/server/src/auth/: apple.rs  google.rs  jwks.rs  kek.rs  mod.rs  session.rs
Wallet-Rust/backend/server/src/http/: cookies.rs  csrf.rs  mod.rs  origin.rs
Wallet-Rust/backend/server/src/infra/: admin.rs  app_builder.rs  cache.rs  constants.rs  contracts.rs  cors.rs  middleware.rs  mod.rs  observability.rs  proxy.rs  rate_limit_store.rs  redis_store.rs  router.rs  rpc.rs  state.rs  utils.rs
Wallet-Rust/backend/server/src/routes/: auth.rs  evm.rs  jupiter.rs  mod.rs  proxy.rs  solana_amm.rs  swap_v1.rs  system.rs  testnet_amm.rs  wallet.rs
Wallet-Rust/backend/solana-tooling/: Cargo.toml
Wallet-Rust/backend/solana-tooling/src/: anchor_ix.rs  lib.rs  service.rs  types.rs
Wallet-Rust/backend/state/: cloud_recovery_blobs.json  deployed_testnet_amm_amoy.json  deployed_testnet_amm_bsc.json  deployed_testnet_amm_sepolia.json  solana_amm_testnet.json
Wallet-Rust/core-rust/: Cargo.toml  build.rs
Wallet-Rust/core-rust/src/: bitcoin.rs  crypto.rs  evm.rs  jni.rs  keys.rs  lib.rs  solana.rs  types.rs
Wallet-Rust/docs/: ANDROID_USER_FLOW.md  ARCHITECTURE.md  AUDIT_CHECKLIST.md  AUDIT_PACKET.md  BASELINE_METRICS.md  CHANGELOG_PHASE4.md  CHANGELOG_PHASE5.md  CHANGELOG_PHASE6.md  CSP_POLICY.md  DATA_FLOWS.md  DEPENDENCY_INVENTORY.md  ELEMENTA_DESIGN_SYSTEM.md  ELEMENTA_UI.md  INCIDENT_RESPONSE.md  KEY_MANAGEMENT.md  LOGGING.md  MIGRATION_PHASE_GATE.md  OBSERVABILITY.md  README.md  RUNBOOK.md  SECURITY_MODEL.md  THREAT_MODEL.md
Wallet-Rust/kotlin-bindings/: build.gradle.kts  gradle.properties  settings.gradle.kts
Wallet-Rust/scripts/: README.md  build_android_abies.ps1  build_android_abies.sh  build_android_so.ps1  generate_uniffi_bindings.ps1
Wallet-Rust/wasm/: Cargo.toml
Wallet-Rust/wasm/src/: lib.rs
front-kotlin/: ANDROID_STUDIO_FIX_REPORT.md  QUICK_START.txt  SETUP_GUIDE.md
front-kotlin/android/android/: gradle.properties
front-kotlin/android/android2/: README-INTEGRATION.md  build2.txt  build_log_2.txt  build_new.txt  gradle.properties  gradlew
front-kotlin/android/android2 - Copy/: build.gradle.kts  build_error.txt  build_log.txt  build_output.txt  out.txt  settings.gradle.kts
scripts/: find_alert_icon.ps1  generate_uniffi_bindings.ps1
(+252 files in other folders)
