[package]
name = "wallet_core"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
bip32 = "0.5"
bip39 = "2.0"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
hex = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
rlp = "0.5"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
bech32 = "0.9"
zeroize = "1.7"
ethereum-types = "0.14"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bs58 = "0.5"
slip10 = "0.4"

# hassam dev: JNI support for Android integration
jni = "0.21"
thiserror = "2"

[features]
default = ["dangerous-key-export"]
wasm = []
dangerous-key-export = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
