[package]
name = "wallet_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wallet_core = { path = "../core-rust", default-features = false, features = ["wasm"] }

[features]
# Security: key export must be explicitly enabled at build time.
default = []
dangerous-key-export = ["wallet_core/dangerous-key-export"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
