[package]
name = "earth_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
earth_backend_core = { path = "../core" }
earth_evm_tooling = { path = "../evm-tooling" }
earth_solana_tooling = { path = "../solana-tooling" }

anyhow = "1"
thiserror = "2"

axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "limit"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2"
urlencoding = "2"
url = "2"

jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
time = { version = "0.3", features = ["macros"] }

dashmap = "6"
moka = { version = "0.12", features = ["future"] }
once_cell = "1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

dotenvy = "0.15"

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
